--- a/reversedString.html
+++ b/reversedString.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-<script src="reversedString.js"></script>
+<script src="/reversedString.js"></script>
 </body>
 </html>
