--- a/javascript/Prac1.html
+++ b/javascript/Prac1.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-<script src="/reversedString.js"></script>
+<script src="/javascript/Prac1.js"></script>
 </body>
 </html>
