--- a/javascript/Prac2.html
+++ b/javascript/Prac2.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-<script src="Prac1.js"></script>
+<script src="/javascript/Prac2.js"></script>
 </body>
 </html>
