--- a/javascript/reversedString.html
+++ b/javascript/reversedString.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-<script src="Prac2.js"></script>
+<script src="/javascript/reversedString.js"></script>
 </body>
 </html>
